feat(Stage5): add JWT authentication with login

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {
+    "Key": "MySecretKeyThatShouldBeLongEnough",
+    "Issuer": "HRSystem",
+    "Audience": "HRSystemUsers",
+    "ExpireMinutes": 60
+  },
   "ConnectionStrings": {
     "Postgres": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres"
   },
